{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 25,
  "lineage": "23296a63-ca66-0ea9-f18c-53f160746086",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "task15_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a9a48ce4458e384e",
            "arn": "arn:aws:ec2:us-east-1:816069164153:instance/i-0fa05a0d63cfd406d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa05a0d63cfd406d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "asha.nvirg",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0296b1764b8108e4c",
            "private_dns": "ip-10-10-10-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.10",
            "public_dns": "ec2-52-90-85-255.compute-1.amazonaws.com",
            "public_ip": "52.90.85.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-004c563ebc9b2ab65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abe382086f94a155",
            "tags": {
              "Name": "task15-app-server1"
            },
            "tags_all": {
              "Name": "task15-app-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d4d4ae7ac926e43"
            ]
          },
          "dependencies": [
            "aws_db_instance.task15_db",
            "aws_db_subnet_group.task15_db_subnet_group",
            "aws_security_group.task15_app_sg",
            "aws_security_group.task15_db_sg",
            "aws_subnet.task15_public_subnets",
            "aws_vpc.task15_vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a9a48ce4458e384e",
            "arn": "arn:aws:ec2:us-east-1:816069164153:instance/i-0180a073f45676007",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0180a073f45676007",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "asha.nvirg",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0afbe04c98a7f301b",
            "private_dns": "ip-10-10-10-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.24",
            "public_dns": "ec2-18-212-229-115.compute-1.amazonaws.com",
            "public_ip": "18.212.229.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0833e5bf273c96ec2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023efd12be271252d",
            "tags": {
              "Name": "task15-app-server2"
            },
            "tags_all": {
              "Name": "task15-app-server2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d4d4ae7ac926e43"
            ]
          },
          "dependencies": [
            "aws_db_instance.task15_db",
            "aws_db_subnet_group.task15_db_subnet_group",
            "aws_security_group.task15_app_sg",
            "aws_security_group.task15_db_sg",
            "aws_subnet.task15_public_subnets",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task15_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:internet-gateway/igw-06e06190db60c8c43",
            "id": "igw-06e06190db60c8c43",
            "owner_id": "816069164153",
            "tags": {
              "Name": "task15-igw"
            },
            "tags_all": {
              "Name": "task15-igw"
            },
            "vpc_id": "vpc-0f1416fc54aacfe3c"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "task15_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:loadbalancer/app/task15-alb/1f4d866a5f476728",
            "arn_suffix": "app/task15-alb/1f4d866a5f476728",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "task15-alb-418739941.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069164153:loadbalancer/app/task15-alb/1f4d866a5f476728",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task15-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-039b26e436b7df834"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023efd12be271252d"
              },
              {
                "subnet_id": "subnet-0abe382086f94a155"
              }
            ],
            "subnets": [
              "subnet-023efd12be271252d",
              "subnet-0abe382086f94a155"
            ],
            "tags": {
              "Name": "task15-alb"
            },
            "tags_all": {
              "Name": "task15-alb"
            },
            "vpc_id": "vpc-0f1416fc54aacfe3c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.task15_public_subnets",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "task15_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:listener/app/task15-alb/1f4d866a5f476728/cab410390fa67960",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:targetgroup/task15-tg/30b4ecf7abffe59b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069164153:listener/app/task15-alb/1f4d866a5f476728/cab410390fa67960",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:loadbalancer/app/task15-alb/1f4d866a5f476728",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.task15_alb",
            "aws_lb_target_group.task15_tg",
            "aws_subnet.task15_public_subnets",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "task15_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:targetgroup/task15-tg/30b4ecf7abffe59b",
            "arn_suffix": "targetgroup/task15-tg/30b4ecf7abffe59b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069164153:targetgroup/task15-tg/30b4ecf7abffe59b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:816069164153:loadbalancer/app/task15-alb/1f4d866a5f476728"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "task15-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "task15-tg"
            },
            "tags_all": {
              "Name": "task15-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f1416fc54aacfe3c"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task15_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:route-table/rtb-09bd3624de98ad737",
            "id": "rtb-09bd3624de98ad737",
            "owner_id": "816069164153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e06190db60c8c43",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task15-public-rt"
            },
            "tags_all": {
              "Name": "task15-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1416fc54aacfe3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.task15_igw",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task15_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed21df8d7a50c4e",
            "route_table_id": "rtb-09bd3624de98ad737",
            "subnet_id": "subnet-0abe382086f94a155"
          },
          "dependencies": [
            "aws_internet_gateway.task15_igw",
            "aws_route_table.task15_public_rt",
            "aws_subnet.task15_public_subnets",
            "aws_vpc.task15_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ab89fd3d0c1c6db",
            "route_table_id": "rtb-09bd3624de98ad737",
            "subnet_id": "subnet-023efd12be271252d"
          },
          "dependencies": [
            "aws_internet_gateway.task15_igw",
            "aws_route_table.task15_public_rt",
            "aws_subnet.task15_public_subnets",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task15_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:security-group/sg-07d4d4ae7ac926e43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d4d4ae7ac926e43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250404171149481400000001",
            "name_prefix": "terraform-",
            "owner_id": "816069164153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task15-app-sg"
            },
            "tags_all": {
              "Name": "task15-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1416fc54aacfe3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task15_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:security-group/sg-094c3eaac6321d36c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094c3eaac6321d36c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d4d4ae7ac926e43"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250404171151739100000003",
            "name_prefix": "terraform-",
            "owner_id": "816069164153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task15-db-sg"
            },
            "tags_all": {
              "Name": "task15-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1416fc54aacfe3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.task15_app_sg",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task15_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-0abe382086f94a155",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abe382086f94a155",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task15-public-subnet-1"
            },
            "tags_all": {
              "Name": "task15-public-subnet-1"
            },
            "vpc_id": "vpc-0f1416fc54aacfe3c"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-023efd12be271252d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023efd12be271252d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task15-public-subnet-2"
            },
            "tags_all": {
              "Name": "task15-public-subnet-2"
            },
            "vpc_id": "vpc-0f1416fc54aacfe3c"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task15_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:vpc/vpc-0f1416fc54aacfe3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.10.0/24",
            "default_network_acl_id": "acl-0eb728eb6e10c1e10",
            "default_route_table_id": "rtb-0dd93ae60650b6fe2",
            "default_security_group_id": "sg-039b26e436b7df834",
            "dhcp_options_id": "dopt-00141fe49c93ae4b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1416fc54aacfe3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd93ae60650b6fe2",
            "owner_id": "816069164153",
            "tags": {
              "Name": "task15-vpc"
            },
            "tags_all": {
              "Name": "task15-vpc"
            }
          }
        }
      ]
    }
  ]
}